Changed tile text to uncapitalize all letters on MunicipalityAdministration. Sorted Select Municipality pulldowns on dashboards alphabetically by Municipality Name Files modified - [Main.html,MunicipalityAdministration.html,MyMunicipality.html]

--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -16,7 +16,7 @@
                             <wm-label class="col-md-3 form-control-static" name="label2" caption="Select Muncipality"></wm-label>
                             <wm-container class="col-md-9" name="container1">
                                 <wm-select name="selectStandardUserMunicipality" dataset="bind:Variables.StandardUserMunicipalites.dataSet" datafield="All Fields" displayfield="MunicipalityName" datavalue="bind:Variables.StandardUserMunicipalites.firstRecord"
-                                height="38px"></wm-select>
+                                height="38px" orderby="MunicipalityName:asc"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
