Updated field display text, updated "Group" section label style Files modified - [MunicipalityUsers.html]

--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -172,12 +172,12 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow11">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn25" padding="unset unset 1em 1em">
-                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="PostalCode" name="label18"></wm-label>
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="Postal Code" name="label18"></wm-label>
                         <wm-label padding="unset 0.5em" caption="bind:Widgets.gridUsersubscriptionsList.selecteditem.users.postalCode" name="label20"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn26"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn27" padding="unset unset 1em unset">
-                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="PhoneNumber" name="label17"></wm-label>
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="Phone Number" name="label17"></wm-label>
                         <wm-label padding="unset 0.5em" caption="bind:Widgets.gridUsersubscriptionsList.selecteditem.users.phoneNumber" name="label21"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
@@ -291,18 +291,18 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow31">
                     <wm-gridcolumn columnwidth="6" padding="unset unset 1em 1em" name="gridcolumn64">
-                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="PostalCode" name="label44"></wm-label>
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="Postal Code" name="label44"></wm-label>
                         <wm-label padding="unset 0.5em" caption="bind:Widgets.gridEmployees.selecteditem.PostalCode" name="label45"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn65"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" padding="unset unset 1em unset" name="gridcolumn66">
-                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="PhoneNumber" name="label46"></wm-label>
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="Phone Number" name="label46"></wm-label>
                         <wm-label padding="unset 0.5em" caption="bind:Widgets.gridEmployees.selecteditem.PhoneNumber" name="label47"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow26_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn49_1">
-                        <wm-label padding="unset 0.5em" name="label34_1" caption="Groups" class="h2"></wm-label>
+                        <wm-label padding="unset 0.5em" name="label34_1" caption="Groups" class="h3 label-primary"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow28_1">
@@ -381,18 +381,18 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow32">
                     <wm-gridcolumn columnwidth="6" padding="unset unset 1em 1em" name="gridcolumn64_1">
-                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="PostalCode" name="label45_1"></wm-label>
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="Postal Code" name="label45_1"></wm-label>
                         <wm-label padding="unset 0.5em" caption="bind:Widgets.gridAdmin.selecteditem.PostalCode" name="label46_1"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn65_1"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" padding="unset unset 1em unset" name="gridcolumn66_1">
-                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="PhoneNumber" name="label47_1"></wm-label>
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="Phone Number" name="label47_1"></wm-label>
                         <wm-label padding="unset 0.5em" caption="bind:Widgets.gridAdmin.selecteditem.PhoneNumber" name="label48"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow33">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn67">
-                        <wm-label padding="unset 0.5em" caption="Groups" class="h2" name="label49"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="Groups" class="h3 label-primary" name="label49"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow34">
